--- a/Docs/IJES/journal.tex
+++ b/Docs/IJES/journal.tex
@@ -391,7 +391,7 @@ main {
 \end{lstlisting}
 
 \vspace{2 mm}
-It is possible to instruct ESBMC with which type of values the variables must be tested. Therefore, there is a declaration to populate all decision variables $x$ with non-deterministic Boolean values. Those values that change for each test will generate a possible solution and obey the constraints. If this is achieved, then a feasible solution is found and the ASSUME directive is responsible for ensuring the compliance of those constrains (\textit{i.e.}, $A.x \leq b$).
+It is possible to instruct ESBMC with which type of values the variables must be tested. Therefore, there is a declaration to populate all decision variables $x$ with non-deterministic Boolean values. \textcolor{blue}{Those values are selected by the SMT Solver during its execution, which is responsible to test once all possible combinations in order to yield a feasible solution. If this is achieved, the ASSUME directive ensures the compliance of the constraint $A.x \leq b$}.
 
 A loop controls the cost of hardware hint, starting with zero and reaching the maximum value considering the case, where all nodes are partitioned to hardware ($H_{max}$). To every test performed, the hardware hint is compared to the feasible solution. This is accomplished by an \textit{ASSERT} statement at the end of the algorithm, a predicate that controls the halt condition (a \textit{true-false} statement). If the predicate is \textit{FALSE}, then the optimization is finished, {\it i.e.}, the solution is found. 
 
