--- a/Docs/IJES/journal.tex
+++ b/Docs/IJES/journal.tex
@@ -727,10 +727,10 @@ Arato, P., Juhasz, S., Mann, A., Orban, A. and Papp, D. (2003) 'Hardware/softwar
 Mann, A., Orban, A. and Arato, P. (2007) 'Finding optimal hardware/software partitions', {\it Formal Methods in System Design}, Vol. 31, No. 3, pp.241--263
 
 \bibitem[\protect\citeauthoryear{Trindade and Cordeiro}{2015}]{Trindade2015}
-Trindade, A. and Cordeiro, L. (2015) 'Applying SMT-based verification to hardware/software partitioning in embedded systems', {\it Design Automation for Embedded Systems (to appear)}
+Trindade, A. and Cordeiro, L. (2015) 'Applying SMT-based verification to hardware/software partitioning in embedded systems', {\it Design Automation for Embedded Systems}, Vol. 20, No. 1, pp. 1--19
 
 \bibitem[\protect\citeauthoryear{Trindade \textit{et al.}}{2015}]{Trindade2016}
-Trindade, A., Ismail, H. and Cordeiro, L. (2015) 'Applying Multi-Core Model Checking to Hardware-Software Partitioning in Embedded Systems (short paper)', {\it V Brazilian Symposium on Computing Systems Engineering (to appear)}
+Trindade, A., Ismail, H. and Cordeiro, L. (2015) 'Applying Multi-Core Model Checking to Hardware-Software Partitioning in Embedded Systems (short paper)', {\it V Brazilian Symposium on Computing Systems Engineering}, pp. 102--105
 
 \bibitem[\protect\citeauthoryear{Bjorner \textit{et al.}}{2015}]{Bjorner2015}
 Bjorner, N., Phan, A. and Fleckenstein, L. (2015) 'vZ - An Optimizing SMT Solver', {\it Proceedings of the International Conference on Tools and Algorithms for the Construction and Analysis of Systems}, Vol. 9035, pp.194--199
